--- a/local.settings.json
+++ b/local.settings.json
@@ -2,6 +2,8 @@
   "IsEncrypted": false,
   "Values": {
     "AzureWebJobsStorage": "",
-    "FUNCTIONS_WORKER_RUNTIME": "python"
+    "FUNCTIONS_WORKER_RUNTIME": "python",
+    "PYTHON_ISOLATE_WORKER_DEPENDENCIES": "1",
+    "FUNCTIONS_WORKER_RUNTIME_PYTHON": "C:\\Users\\milou\\Documents\\Git\\rag-lab-milou-de24\\.venv\\Scripts\\python.exe"
   }
 }
